syntax = "proto3";
package meta.service.mqtt;

import "meta/validate.proto";

service MqttService {
  // User
  rpc ListUser(ListUserRequest) returns (ListUserReply) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserReply) {}

  // Session
  rpc ListSession(ListSessionRequest) returns (ListSessionReply) {}
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionReply) {}
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionReply) {}

  // Topic
  rpc ListTopic(ListTopicRequest) returns (stream ListTopicReply) {}
  rpc CreateTopic(CreateTopicRequest) returns (CreateTopicReply) {}
  rpc DeleteTopic(DeleteTopicRequest) returns (DeleteTopicReply) {}
  rpc SetTopicRetainMessage(SetTopicRetainMessageRequest) returns (SetTopicRetainMessageReply) {}
  rpc GetTopicRetainMessage(GetTopicRetainMessageRequest) returns (GetTopicRetainMessageReply) {}

  // Share Subscription
  rpc GetShareSubLeader(GetShareSubLeaderRequest) returns (GetShareSubLeaderReply) {}

  // Last Will
  rpc SaveLastWillMessage(SaveLastWillMessageRequest) returns (SaveLastWillMessageReply) {}
  rpc GetLastWillMessage(GetLastWillMessageRequest) returns (GetLastWillMessageReply) {}

  // ACL
  rpc ListAcl(ListAclRequest) returns (ListAclReply) {}
  rpc CreateAcl(CreateAclRequest) returns (CreateAclReply) {}
  rpc DeleteAcl(DeleteAclRequest) returns (DeleteAclReply) {}

  // Blacklist
  rpc ListBlacklist(ListBlacklistRequest) returns (ListBlacklistReply) {}
  rpc CreateBlacklist(CreateBlacklistRequest) returns (CreateBlacklistReply) {}
  rpc DeleteBlacklist(DeleteBlacklistRequest) returns (DeleteBlacklistReply) {}

  // Topic Rewrite Rule
  rpc CreateTopicRewriteRule(CreateTopicRewriteRuleRequest) returns (CreateTopicRewriteRuleReply) {}
  rpc DeleteTopicRewriteRule(DeleteTopicRewriteRuleRequest) returns (DeleteTopicRewriteRuleReply) {}
  rpc ListTopicRewriteRule(ListTopicRewriteRuleRequest) returns (ListTopicRewriteRuleReply) {}

  // Subscribe
  rpc ListSubscribe(ListSubscribeRequest) returns (ListSubscribeReply) {}
  rpc SetSubscribe(SetSubscribeRequest) returns (SetSubscribeReply) {}
  rpc DeleteSubscribe(DeleteSubscribeRequest) returns (DeleteSubscribeReply) {}

  // Connector
  rpc ListConnectors(ListConnectorRequest) returns (ListConnectorReply) {}
  rpc CreateConnector(CreateConnectorRequest) returns (CreateConnectorReply) {}
  rpc UpdateConnector(UpdateConnectorRequest) returns (UpdateConnectorReply) {}
  rpc DeleteConnector(DeleteConnectorRequest) returns (DeleteConnectorReply) {}
  rpc ConnectorHeartbeat(ConnectorHeartbeatRequest) returns (ConnectorHeartbeatReply) {}

  // Auto Subscribe Rule
  rpc SetAutoSubscribeRule(SetAutoSubscribeRuleRequest) returns (SetAutoSubscribeRuleReply) {}
  rpc DeleteAutoSubscribeRule(DeleteAutoSubscribeRuleRequest) returns (DeleteAutoSubscribeRuleReply) {}
  rpc ListAutoSubscribeRule(ListAutoSubscribeRuleRequest) returns (ListAutoSubscribeRuleReply) {}
}

message GetShareSubLeaderRequest {
  string group_name = 1 [(validate.rules).string.min_len = 1];
}

message GetShareSubLeaderReply {
  uint64 broker_id = 1;
  string broker_addr = 2;
  bytes extend_info = 3;
}

message ListUserRequest {
  string user_name = 2;
}

message ListUserReply {
  repeated bytes users = 1;
}

message CreateUserRequest {
  string user_name = 2 [(validate.rules).string.min_len = 1];
  bytes content = 3 [(validate.rules).bytes.min_len = 1];
}

message CreateUserReply {}

message DeleteUserRequest {
  string user_name = 2 [(validate.rules).string.min_len = 1];
}

message DeleteUserReply {}

message ListTopicRequest {
  string topic_name = 2;
}

message ListTopicReply {
  bytes topic = 1;
}

message CreateTopicRequest {
  string topic_name = 2 [(validate.rules).string.min_len = 1];
  bytes content = 3 [(validate.rules).bytes.min_len = 1];
}

message CreateTopicReply {}

message DeleteTopicRequest {
  string topic_name = 2 [(validate.rules).string.min_len = 1];
}

message DeleteTopicReply {}

message SetTopicRetainMessageRequest {
  string topic_name = 2 [(validate.rules).string.min_len = 1];
  optional bytes retain_message = 3;
  uint64 retain_message_expired_at = 4 [(validate.rules).uint64.gte = 0];
}

message SetTopicRetainMessageReply {}

message GetTopicRetainMessageRequest {
  string topic_name = 2 [(validate.rules).string.min_len = 1];
}

message GetTopicRetainMessageReply {
  optional bytes retain_message = 1;
  uint64 retain_message_expired_at = 2;
}

message ListSessionRequest {
  string client_id = 2;
}

message ListSessionReply {
  repeated bytes sessions = 1;
}

message CreateSessionRequest {
  string client_id = 2 [(validate.rules).string.min_len = 1];
  bytes session = 3 [(validate.rules).bytes.min_len = 1];
}

message CreateSessionReply {}

message DeleteSessionRequest {
  string client_id = 2 [(validate.rules).string.min_len = 1];
}

message DeleteSessionReply {}

message SaveLastWillMessageRequest {
  string client_id = 2 [(validate.rules).string.min_len = 1];
  bytes last_will_message = 3 [(validate.rules).bytes.min_len = 1];
}

message SaveLastWillMessageReply {}

message GetLastWillMessageRequest {
  string client_id = 2 [(validate.rules).string.min_len = 1];
}

message GetLastWillMessageReply {
  bytes message =1;
}

message ListAclRequest {
}

message ListAclReply {
  repeated bytes acls = 2;
}

message DeleteAclRequest {
  bytes acl = 2 [(validate.rules).bytes.min_len = 1];
}

message DeleteAclReply {}

message CreateAclRequest {
  bytes acl = 2 [(validate.rules).bytes.min_len = 1];
}

message CreateAclReply {}

message ListBlacklistRequest {
}

message ListBlacklistReply {
  repeated bytes blacklists = 2;
}

message CreateBlacklistRequest {
  bytes blacklist = 2 [(validate.rules).bytes.min_len = 1];
}

message CreateBlacklistReply {}

message DeleteBlacklistRequest {
  string blacklist_type = 2 [(validate.rules).string.min_len = 1];
  string resource_name = 3 [(validate.rules).string.min_len = 1];
}

message DeleteBlacklistReply {}

message CreateTopicRewriteRuleRequest {
  string action = 2 [(validate.rules).string.min_len = 1];
  string source_topic = 3 [(validate.rules).string.min_len = 1];
  string dest_topic = 4 [(validate.rules).string.min_len = 1];
  string regex = 5 [(validate.rules).string.min_len = 1];
}

message CreateTopicRewriteRuleReply {}

message DeleteTopicRewriteRuleRequest {
  string action = 2 [(validate.rules).string.min_len = 1];
  string source_topic = 3 [(validate.rules).string.min_len = 1];
}

message DeleteTopicRewriteRuleReply {}

message ListTopicRewriteRuleRequest {
}

message ListTopicRewriteRuleReply {
  repeated bytes topic_rewrite_rules = 1;
}

message SetSubscribeRequest {
  string client_id = 3 [(validate.rules).string.min_len = 1];
  string path = 4 [(validate.rules).string.min_len = 1];
  bytes subscribe = 5 [(validate.rules).bytes.min_len = 1];
}

message SetSubscribeReply {}

message DeleteSubscribeRequest {
  string client_id = 2 [(validate.rules).string.min_len = 1];
  string path = 3 [(validate.rules).string.min_len = 1];
}

message DeleteSubscribeReply {}

message ListSubscribeRequest {
}

message ListSubscribeReply {
  repeated bytes subscribes = 1;
}

message ListConnectorRequest {
  string connector_name = 2;
}

message ListConnectorReply {
  repeated bytes connectors = 1;
}

message CreateConnectorRequest {
  string connector_name = 2 [(validate.rules).string.min_len = 1];
  bytes connector = 3 [(validate.rules).bytes.min_len = 1];
}

message CreateConnectorReply {}

message UpdateConnectorRequest {
  string connector_name = 2 [(validate.rules).string.min_len = 1];
  bytes connector = 3 [(validate.rules).bytes.min_len = 1];
}

message UpdateConnectorReply {}

message DeleteConnectorRequest {
  string connector_name = 2 [(validate.rules).string.min_len = 1];
}

message DeleteConnectorReply {}

message ConnectorHeartbeatRequest {
  repeated ConnectorHeartbeatRaw heatbeats = 2 [(validate.rules).repeated.min_items = 1];
}

message ConnectorHeartbeatRaw {
  string connector_name = 1 [(validate.rules).string.min_len = 1];
  uint64 broker_id = 2 [(validate.rules).uint64.gte = 0];
  uint64 heartbeat_time = 3 [(validate.rules).uint64.gte = 0];
}

message ConnectorHeartbeatReply {}

message SetAutoSubscribeRuleRequest {
  string topic = 2 [(validate.rules).string.min_len = 1];
  uint32 qos = 3 [(validate.rules).uint32.lte = 2];
  bool no_local = 4;
  bool retain_as_published = 5;
  uint32 retained_handling = 6 [(validate.rules).uint32.lte = 2];
}

message SetAutoSubscribeRuleReply {}

message DeleteAutoSubscribeRuleRequest {
  string topic = 2 [(validate.rules).string.min_len = 1];
}

message DeleteAutoSubscribeRuleReply {}

message ListAutoSubscribeRuleRequest {
}

message ListAutoSubscribeRuleReply {
  repeated bytes auto_subscribe_rules = 1;
}
